welcome.lessons.welcome.bat.bool2.AlarmClock.scala.error
alarmClock:2: error: ')' expected but ':' found.
	def in15(a:Int:Boolean = {
                      ^alarmClock:6: error: ';' expected but 'var' found.
	var rep = "off"
        ^